# felo-backend

./: .gcloudignore  .gitignore  .pylintrc  Makefile  app.yaml  pyproject.toml  requirements.txt
felo/: main.py  manual_tests.json
felo/config/: default.py  dev.env  prod.env  utils.py
felo/db/: __init__.py
felo/db/connection/: __init__.py  session.py
felo/db/logic/: lookup.py  user.py
felo/db/migrator/: env.py
felo/db/migrator/versions/: 2023-11-03_0efb74e4aee0_.py  2023-11-03_3b53561678bc_.py  2023-11-14_ddf896c79cde_.py  2023-11-17_ec0bec1848f0_.py  2023-11-20_b2555fc802ef_.py  2023-11-26_ffc6d3f21cb8_.py  2023-11-28_00e2cd7683fd_.py  2023-11-28_25668af45831_.py  2023-11-28_5fc5abe6245c_.py  2023-11-28_ccc0e7a299f4_.py  2023-11-28_d8f299c72bd2_.py  2023-11-28_f56429f2143c_.py  (+2 more)
felo/db/models/: __init__.py  base.py  favorite.py  language.py  lookup.py  user.py
felo/endpoints/: __init__.py  favorites.py
felo/endpoints/api/: api.py
felo/endpoints/auth/: google.py
felo/endpoints/logs/: front.py
felo/endpoints/translator/: prompt copy 2.py  prompt copy 4.py  prompt copy.py  prompt.py  pytranslator.txt  translator.py  translator_prompt.txt
felo/schemas/: base_model_db.py  cards.py  favorites.py  logs.py  lookup.py  translations.py  user.py
felo/schemas/languages/: iso639.py
felo/services/: favorites.py  language_model_tranlation.py  postprocessing.py  preprocessing.py  simple_translation.py
felo/services/LanguageModelsAdapters/: language_model_protocol.py  openai.py  openai_adhoc.py
felo/utils/: api_clients.py  auth_tokens.py  jwt_utils.py
