[tool.poetry]
name = "felo"
version = "0.1.0"
description = ""
authors = ["dinlat <din.latypov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
authlib = "^1.2.1"
itsdangerous = "^2.1.2"
google-cloud-secret-manager = "^2.16.4"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
pyjwt = "^2.8.0"
mypy = "^1.7.0"
openai = "^1.2.3"
asyncpg = "^0.29.0"
google-cloud-translate = "^3.12.1"
python-iso639 = "^2023.6.15"
pydantic = {extras = ["email"], version = "^2.5.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    'felo/db/migrator'
]
